# xorc-gateway

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.md  TODO.md  build.rs  docker-compose.yml  grafana.json  test-sdk.py
config/: config.toml.development  config.toml.example  config.toml.tests
deploy/: staging.mar.template  staging.yaml
deploy/gateway/: Chart.yaml  values.yaml
deploy/gateway/templates/: config.toml  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
docker/aerospike/: Dockerfile  aerospike.conf
docker/rabbitmq/: Dockerfile  definitions.json
resources/sql/: scylladb_schema_and_data.sql
src/: app_registry.rs  config.rs  context.rs  cors.rs  encryption.rs  entity_storage.rs  error.rs  gateway.rs  headers.rs  id_check.rs  ifa_matching.rs  logger.rs  main.rs  metrics.rs
src/bus/: kafka.rs  mod.rs  rabbitmq.rs
src/events/: mod.rs  sdk_device.rs  sdk_environment.rs  sdk_event.rs  sdk_event_batch.rs  sdk_response.rs
src/events/input/: sdk_device.rs  sdk_environment.rs  sdk_event.rs  sdk_event_batch.rs  sdk_response.rs
src/events/output/: mod.rs
src/proto_events/: mod.rs
