[package]
name = "xorc-gateway"
version = "0.1.0"
authors = ["Julius de Bruijn <julius.debruijn@360dialog.com>"]
build = "build.rs"

[dependencies]
hyper = "0.12"
http = "0.1"
log = "0.4"
env_logger = "0.5"
lazy_static = "1.0"
gelf = { git = "https://github.com/pimeys/gelf-rust.git", branch = "borrowing_message_interface" }
pretty_env_logger = "0.2"
ring = "0.13.0-alpha"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4"
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
chrono = "0.4"
futures = "0.1"
base64 = "0.9"
rand = "0.5"
uuid = { version = "0.6", features = ["serde", "v4"] }
tokio = "0.1"
tokio-threadpool = "0.1"
hex = "0.3"
r2d2 = "0.8"
r2d2_postgres = "0.14"
indoc = "0.2"
crossbeam = "0.3"
aerospike = "0.2"
prometheus = "0.4"
maxminddb = "0.9"
blake2 = "0.7"
rdkafka = "0.17"
lapin-futures = "0.13"
tokio-signal = "0.2"

[build-dependencies]
prost-build = "0.4"

[dependencies.postgres]
version = "0.15"
default-features = true
features = ["with-chrono"]
